--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>user-service</name>
 	<description>Service for User Management</description>
 	<properties>
-		<java.version>18</java.version>
+		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -25,6 +25,12 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.netflix.eureka2/eureka-server -->
+		<dependency>
+			<groupId>com.netflix.eureka2</groupId>
+			<artifactId>eureka-server</artifactId>
+			<version>2.0.0-DP4</version>
 		</dependency>
 
 		<dependency>
