Initial code added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.jpa.hibernate.ddl-auto = update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.show-sql=true
-server.port=9191
-
+#server.port=3306
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/info.app.name= Eureka client
+info.app.description= This is a Eureka Server - a spring boot application
+info.app.version= 1.0.0
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+server.port=3005
 
