--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,24 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/User_Service
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
+
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.jpa.show-sql=true
-#server.port=3306
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka/info.app.name= Eureka client
 info.app.description= This is a Eureka Server - a spring boot application
 info.app.version= 1.0.0
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+
+
+
+spring.application.name=user-service
 server.port=3005
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/User_Service
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
